added all pages except page 3

--- a/index.html
+++ b/index.html
@@ -222,6 +222,39 @@
                 <h1>music - <span>automotive</span> - hotels -</h1>
             </div> 
         </div>
+        <div id="page6">
+            <div id="footer">
+                <div id="footer-head">
+                    <h1>let's create</h1>
+                </div>
+                <div class="underline"></div>
+                <div id="boxes">
+                    <div class="box">
+                        <h6>Socials</h6>
+                        <h4>Dribbble</h4>
+                        <h4>Behance</h4>
+                        <h4>Instagram</h4>
+                        <h4>Facebook</h4>
+                        <h4>Twitter</h4>
+                        <h4>YouTube</h4>
+                    </div>
+                    <div class="box">
+                        <h6>Address</h6>
+                        <h4>Zamarstynivska 55
+                            79019 Lviv
+                           <br> Ukraine
+                        </h4>
+                    </div>
+                    <div class="box">
+                        <h6>Say Hi!</h6>
+                        <h4>info@obys.agency</h4>
+                    </div>
+    
+                </div>
+                <div class="underline"></div>
+                <h3>Obys Agency©️2025</h3>
+            </div>
+        </div>
     </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
