commented out cursor div in index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div id="cursor">
-    </div>
+    <!-- <div id="cursor">
+    </div> -->
     <div id="loader">
         <div class="line" id="line1">
             <div id="line1-part1">
