--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
 
@@ -36,9 +37,9 @@
     </div>
 
     <div id="main">
-        <div id="page1" data-scroll>
+        <div id="page1" >
             <div id="nav">
-                <div id="nav1">
+                <div id="nav1" data-scroll data-scroll-sticky  data-scroll-target="#main">
                     <svg class="menu-opener__square" width="12" height="12" viewBox="0 0 12 12" fill="none">
                         <rect y="10" width="2" height="2" fill="currentColor"></rect>
                         <rect y="5" width="2" height="2" fill="currentColor"></rect>
