--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
                 </div>
             </div>
         </div>
-        <div id="page2" >
+        <div id="page2">
             <div id="vidContain" data-scroll data-scroll-speed="-2.2">
                 <div id="vidCursor" data-scroll data-scroll-speed="-.8">
                     <i class="ri-play-mini-fill"></i>
                 </div>
-                <video src="assets/Obys-Showreel-2024.mp4"></video>
+                <video controls="none" src="assets/Obys-Showreel-2024.mp4"></video>
             </div>
         </div>
         <div id="page3" >
